unpackaged/main/default/objects/Shipment/fields/CarrierSubStatus__c.field-meta.xml
<CustomField>
    <fullName>CarrierSubStatus__c</fullName>
    <label>CarrierSubStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>