unpackaged/main/default/objects/Shipment/fields/CegidInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>CegidInvoiceNumber__c</fullName>
    <label>Cegid Invoice Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>