unpackaged/main/default/objects/Shipment/fields/CentiroShipmentId__c.field-meta.xml
<CustomField>
    <fullName>CentiroShipmentId__c</fullName>
    <label>CentiroShipmentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>