unpackaged/main/default/objects/Shipment/fields/DispatchDate__c.field-meta.xml
<CustomField>
    <fullName>DispatchDate__c</fullName>
    <label>Dispatch Date</label>
    <type>DateTime</type>
</CustomField>