unpackaged/main/default/objects/Shipment/fields/IsDelivered__c.field-meta.xml
<CustomField>
    <fullName>IsDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delivered</label>
    <type>Checkbox</type>
</CustomField>