unpackaged/main/default/objects/Shipment/fields/WMSShipmentId__c.field-meta.xml
<CustomField>
    <fullName>WMSShipmentId__c</fullName>
    <label>WMS Shipment Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>